# openGL-template

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build-run.bat  build.bat  compile_commands.json  update-includes.bat
.cache/clangd/index/: Importer.hpp.0E8D5A23A4B1652C.idx  Importer.hpp.271986BF0A24A17A.idx  MathFunctions.h.33E454621BBFA00E.idx  Mesh.cpp.6B5D8FAEDB79F6D7.idx  Mesh.hpp.1AF958A5BA4902AA.idx  Model.cpp.3A5693A9F0DCA5E3.idx  Model.hpp.77144FF7C9A9EDB7.idx  ObjMaterial.h.A5314EE10CEA5845.idx  Shader.cpp.7237AE0266D36096.idx  Shader.hpp.54F20CE4A6E1912C.idx  Texture.hpp.19E81EE9091FB7A5.idx  TextureLoader.hpp.C26712FB649991E8.idx  Textures.cpp.60FE0E083DC3A905.idx  Textures.hpp.39503C524A5904DC.idx  Vertex.hpp.243D8DFBFF68A640.idx  _fixes.hpp.F2891E02174AD76A.idx  _vectorize.hpp.C8DF070D9367BD7F.idx  aabb.h.B88CF0C6EAC235A0.idx  anim.h.4D08397BBB6B4646.idx  anim.h.BA1BFB8220BA519F.idx  camera.cpp.0FCC16E918CF9389.idx  camera.h.6E0083082FA7B04B.idx  camera.h.CB73007C760D1ADE.idx  color4.h.17E34969368D27E2.idx  color4.h.744B8C2E3DC7539D.idx  color4.inl.BDFB405FECBF1245.idx  common.hpp.A71D904060D1B58E.idx  compute_common.hpp.816E7EA5D4DAE453.idx  compute_vector_relational.hpp.81B78A7BD0A92FFE.idx  config.h.02B1903CE3596706.idx  constants.hpp.00AEE7ECEE49EEAA.idx  constants.inl.BEAD20FAD41F2418.idx  defs.h.A6D67C99793BD37D.idx  epsilon.hpp.40E0B1EDF89C28F4.idx  epsilon.inl.C3BBF6DB2BC29916.idx  exponential.hpp.0C516408DA859406.idx  func_common.inl.C26D1F2A70316700.idx  func_exponential.inl.608776F91E13F570.idx  func_geometric.inl.56C92087483C7501.idx  func_integer.inl.B6FBB849C5A76405.idx  (+205 more)
compile_includes/: CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
include/assimp/: revision.h
include/glad/: glad.h
include/models/: Mesh.hpp  Model.hpp  Texture.hpp  Vertex.hpp
include/shader/: Shader.hpp
include/textures/: TextureLoader.hpp  Textures.hpp
models/: Mesh.cpp  Model.cpp
shaders/: fragment.frag  fragment.glsl  vertex.glsl  vertex.vert
src/: Shader.cpp  Textures.cpp  glad.cpp  main.cpp
(+18 files in other folders)
